soporte para sqlite

--- a/.env
+++ b/.env
@@ -12,11 +12,11 @@
 # 
 # DB_CHARSET (MySQL, PostgreSQL, Oracle): utf8, utf8mb4
 # 
-DB_DRIVER=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=test 
-DB_USER=root
+DB_DRIVER=
+DB_HOST=
+DB_PORT=
+DB_NAME= 
+DB_USER=
 DB_PASSWORD=
 DB_CHARSET=utf8
 
