--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
             "email": "cabezasever@yahoo.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "require": {
         "php": ">=8",
         "psr/log": "^3.0@dev",
